--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "realtime-and-maps-frontend",
+  "name": "andra-webchat-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-browser-geolocation": "^1.8.0",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^4.1.1",
     "vue2-google-maps": "^0.10.7",
     "vuex": "^3.4.0"
   },
