--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
@@ -16,8 +17,10 @@
     "vue-browser-geolocation": "^1.8.0",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^4.1.1",
+    "vue-toasted": "^1.1.28",
     "vue2-google-maps": "^0.10.7",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
